Opened 12 years ago
Closed 12 years ago
#9433 closed bug (fixed)
BMenuField background problem
Reported by: | dsjonny | Owned by: | axeld |
---|---|---|---|
Priority: | high | Milestone: | R1 |
Component: | Kits/Interface Kit | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
I have downloaded the latest nightly image (45234), and I found a problem, what may caused by this commit: http://cgit.haiku-os.org/haiku/commit/?id=39b9d0f07f3ff33e18aacfa074732c7e4b2b209a
The problem is: the background color of the BMenuField interface element has strange colors and not transparent. Please check the attachment.
Attachments (1)
Change History (2)
by , 12 years ago
Attachment: | BMenuField.png added |
---|
comment:1 by , 12 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Note:
See TracTickets
for help on using tickets.
Oops, fixed in hrev45235.