BMenuField: fixed broken view color.

* Apparently, I only tested the other case :-)
* This fixes bug #9433.