src/kits/interface/MenuField.cpp
@@ -413,7 +413,7 @@ BMenuField::AttachedToWindow()
 	BView* parent = Parent();
 	if (parent != NULL) {
 		// inherit the color from parent
-		rgb_color color = parent->ViewColor();
+		color = parent->ViewColor();
 		if (color == B_TRANSPARENT_COLOR)
 			color = ui_color(B_PANEL_BACKGROUND_COLOR);
 	} else
